# rpi5powermonitor

./: README.md  pyproject.toml
